* Replaced generalized hyperbolic transform stretch method by more general algorithms
* Replaced Libraw with RT debayering
* Fixed comet registration when registration was accumulated over existing data
* Fixed star detection for images with very large stars
* Fixed cancellation of seqpsf or seqcrop
* Fixed photometry analysis of stars with negative pixels around them
* Added 9-panel dialog tool showing corners and center of the image for a closer inspection

siril 1.0.4
XX/XX/22
* Fixed selected area for flat autonormalisation calc
* Fixed wrong initialization in polynomial background extraction

siril 1.0.3
06/28/22
* Fixed memory leak in PixelMath
* Fixed memory leak in SER preview
* Fixed error in seqsubsky
* Fixed the start of two scripts from @ in succession
* Fixed homogeneous image bitpix detection on stacking
* Fixed dates in median and mean stack results
* Fixed bug in stack of some float images
* Fixed black point and clipping in asinh stretch function
* Added new thread for background extraction that does not freeze UI, with a progressbar for RBF
* Added generalised hyperbolic transform stretch method in Image Processing menu, based on algorithms proposed by David Payne in the astrobin forums

siril 1.0.2
05/16/22

* Added new RBF interpolation method in the background extraction tool
* Removed file name length limit in conversion
* Fixed crash in preprocess command if a quote was not closed in -bias= option
* Fixed crash when star detection box was expanded past a border
* Fixed crash in plot when X axis data contained negative values
* Fixed numerous bugs in the background extraction tool
* Fixed bug in PixelMath where only one char parameter where allowed
* Fixed bug in FITS partial reader

siril 1.0.1
04/06/22

* Added min,max, iif and logical operators in pixelmath
* Added support for 3 channels for direct preview of resulting composition in pixelmath
* Added parameters field in PixelMath