@@ -42,6 +42,7 @@ v1.2.0 mmm dd, 2022
 * Fixed star detection for images with very large stars
 * Fixed cancellation of seqpsf or seqcrop
 * Fixed photometry analysis of stars with negative pixels around them
+* Fixed dates keywords in sum and min/max algorithms
 * Added 9-panel dialog tool showing corners and center of the image for a closer inspection
 
 v1.0.4 XX XX, 2022
