@@ -43,6 +43,7 @@ xx/xx/22
 * Fixed star detection for images with very large stars
 * Fixed cancellation of seqpsf or seqcrop
 * Fixed photometry analysis of stars with negative pixels around them
+* Fixed dates keywords in sum and min/max algorithms
 * Added 9-panel dialog tool showing corners and center of the image for a closer inspection
 
 siril 1.0.4
